--- a/app/assets/pages/profile/profile.html
+++ b/app/assets/pages/profile/profile.html
@@ -136,11 +136,11 @@
                                     <div class="col-md-4">
                                         <div class="form-group label-floating">
                                             <label class="control-label">Año de residencia</label>
-                                            <select class="form-control dropdown-toggle" id="" required ng-model="user.anores" ng-value="user.anores">
-                                                <option value=1>1</option>
-                                                <option value=2>2</option>
-                                                <option value=3>3</option>
-                                                <option value=4>4</option>
+                                            <select class="form-control dropdown-toggle" required ng-model="user.anores">
+                                                <option ng-value=1>R1</option>
+                                                <option ng-value=2>R2</option>
+                                                <option ng-value=3>R3</option>
+                                                <option ng-value=4>R4</option>
                                             </select>
                                         </div>
                                     </div>
