--- a/app/assets/pages/entry/entry.html
+++ b/app/assets/pages/entry/entry.html
@@ -34,7 +34,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">LOGBOOK Dashboard</a>
+                    <a class="navbar-brand" href="#">LB - Nueva Entrada</a>
                     <ol class="breadcrumb">
                         <li ng-class="stepClasses[0]"><a ng-click="changeToStep(1)">ID</a></li>
                         <li ng-class="stepClasses[1]"><a ng-click="changeToStep(2)">DX</a></li>
