--- a/app/assets/pages/profile/profile.html
+++ b/app/assets/pages/profile/profile.html
@@ -1,4 +1,4 @@
-<div class="sidebar" data-color="blue" data-image="app/assets/img/sidebar-1.jpg">
+<div class="sidebar" data-color="blue" >
     <div class="logo">
         <a href="dashboard.html" class="simple-text">
             LOGBOOK
@@ -34,7 +34,7 @@
                 </button>
                 <a class="navbar-brand" href="#"> Perfil </a>
             </div>
-            <div class="collapse navbar-collapse">
+            <div class="collapse navbar-collapse" >
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a href="#pablo" class="dropdown-toggle" data-toggle="dropdown">
@@ -43,7 +43,7 @@
                         </a>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown">
                             <i class="material-icons">notifications</i>
                             <span class="notification">5</span>
                             <p class="hidden-lg hidden-md">Notifications</p>
@@ -67,7 +67,7 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#pablo" class="dropdown-toggle" data-toggle="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown">
                             <i class="material-icons">person</i>
                             <p class="hidden-lg hidden-md">Profile</p>
                         </a>
