--- a/app/index.html
+++ b/app/index.html
@@ -107,6 +107,7 @@
 
 <!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
 <script src="./assets/js/material-kit.js" type="text/javascript"></script>
+<script src="./assets/js/material-dashboard.js?v=1.2.0"></script>
 
 <!--  PerfectScrollbar Library -->
 <script src="./assets/js/perfect-scrollbar.jquery.min.js"></script>
